Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - Added a toggle to view factory ingredients in the compact view (#180)
    - The belt throughput display option now shows pump throughput for fluids (#411)
  Changes:
    - Several actions now close the District view when it's open, for more intuitive use of the UI (#379)
  Bugfixes:
    - Fixed that copy/pasting a machine didn't bring along its fuel and modules (#424)
    - Fixed that catalysts weren't being shown in the compact dialog

---------------------------------------------------------------------------------------------------
Version: 2.0.14
Date: 23. 11. 2024
  Features:
    - Added a preference to change the width of the compact dialog
    - Added context menu actions to shift factory products left and right
    - Added a context menu action on fuels to edit them
  Changes:
    - Putting simple machines into the cursor now makes them a ghost instead of a blueprint (#387)
    - All item lists (like on recipes) are now sorted by item type and amount
  Bugfixes:
    - Fixed an issue where machines would not be migrated correctly when their category changed (#423)
    - Fixed an issue where repairing machines didn't configure their fuel correctly (#423)
    - Fixed that putting certain entities into the cursor wouldn't include its modules
    - Fixed a migration crash when trying to load a save that had all factories deleted

---------------------------------------------------------------------------------------------------
Version: 2.0.13
Date: 22. 11. 2024
  Bugfixes:
    - Fixed a crash when pasting a module (#417)
    - Fixed a crash when trying to paste a line that uses fuel in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 2.0.12
Date: 20. 11. 2024
  Bugfixes:
    - Fixed a crash when trying to edit a machine that uses fuel (#412)
    - Fixed a crash when entering a negative beacon amount (#415)