@@ -6,6 +6,7 @@ Date: 00. 00. 0000
     - The belt throughput display option now shows pump throughput for fluids (#411)
   Changes:
     - Several actions now close the District view when it's open, for more intuitive use of the UI (#379)
+    - Machines/fuels/beacons are now guaranteed to have sensible, low-level defaults
   Bugfixes:
     - Fixed that copy/pasting a machine didn't bring along its fuel and modules (#424)
     - Fixed that catalysts weren't being shown in the compact dialog
